--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,6 +30,7 @@
                         <li><a href="/electron">Electronic Structure</a></li>
                         <li><a href="#">Phonon Dispersions</a></li>
                         <li><a href="#">Thermodynamics</a></li>
+                        <li><a href="#">Elasticity</a></li>
                         <li><a href="#">Publications</a></li>
                     </ul>
                 </li>
@@ -48,27 +49,29 @@
     <br/><br/><br/><br/><br/><br/><br/>
     <div class="row">
         <div class="col-lg-4">
-            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/searchPage?name='">Crystal
+            <!--<button type="button" class="btn btn-info btn-lg" onclick="location.href='/crystalStructure1?id=0828a55d-1808-4dcc-a951-0b1f8de81bdd'">Crystal-->
+            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/crystalStructure1?id=0828a55d-1808-4dcc-a951-0b1f8de81bdd'">Crystal
                 Structure<br>晶体结构模块
             </button>
         </div>
         <div class="col-lg-4">
-            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/website/electron'">Electronic
+            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/electronicStructure'">Electronic
                 Structures<br>晶体电子结构模块
             </button>
         </div>
         <div class="col-lg-4">
-            <button type="button" class="btn btn-info btn-lg">Phonon Dispersions<br>晶体声子谱模块</button>
+            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/phonon'">Phonon Dispersions
+                <br>晶体声子谱模块</button>
         </div>
     </div>
     <br/>
     <br/><br/><br/><br/><br/><br/><br/>
     <div class="row">
         <div class="col-lg-4 col-lg-offset-2">
-            <button type="button" class="btn btn-info btn-lg">Thermodynamics<br>晶体热力学性质模块</button>
+            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/themodynamic'">Thermodynamics<br>晶体热力学性质模块</button>
         </div>
         <div class="col-lg-4">
-            <button type="button" class="btn btn-info btn-lg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Elasticity&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>力学性质模块
+            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/elasticityIndex?id=3e3b523e-229d-4202-a245-ddeaca318a63'">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Elasticity&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>力学性质模块
             </button>
         </div>
 
