--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,7 +71,7 @@
             <button type="button" class="btn btn-info btn-lg" onclick="location.href='/themodynamic'">Thermodynamics<br>晶体热力学性质模块</button>
         </div>
         <div class="col-lg-4">
-            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/elasticityIndex?id=3e3b523e-229d-4202-a245-ddeaca318a63'">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Elasticity&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>力学性质模块
+            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/tricliniCrystal'">Elasticity<br>力学性质模块
             </button>
         </div>
 
