--- a/src/main/resources/templates/elasticity.html
+++ b/src/main/resources/templates/elasticity.html
@@ -383,6 +383,8 @@
     <div th:replace="foreWeb/index1::nav"></div>
 </header>
 
+<div th:replace="search::body"></div>
+
 <div class="input-group">
     <input id="materialName1" type="text" class="form-control" placeholder="搜索材料">
     <span class="input-group-btn">
