--- a/src/main/resources/templates/foreWeb/index1.html
+++ b/src/main/resources/templates/foreWeb/index1.html
@@ -274,7 +274,7 @@
             <div class='card-wrapper'>
                 <a href='#'>
                     <div class='card bg-01'>
-                        <a href="/searchPage1?name="><span class='card-content'>总览</span></a>
+                        <a href="/index"><span class='card-content'>总览</span></a>
                     </div>
                 </a>
             </div>
@@ -492,7 +492,6 @@
             <a class="" href="" target="_blank">
                 论坛
             </a>
-
         </li>
         <li>
             <a href="/citing">引用</a>
