--- a/src/main/resources/templates/phonon.html
+++ b/src/main/resources/templates/phonon.html
@@ -388,6 +388,8 @@
     <div th:replace="foreWeb/index1::nav"></div>
 </header>
 
+<div th:replace="search::body"></div>
+
 <div class="container">
     <input id="materialName" type="hidden" th:attr="value=${materialName}">
     <div class="detail" id="material">
