--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>首页</title>
 
-    <script src="http://cdn.static.runoob.com/libs/jquery/1.11.0/jquery.min.js"></script>
-    <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--    <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
+<!--    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
     <script src="https://cdn.bootcss.com/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.2.1/echarts.js"></script>
 </head>
@@ -27,11 +29,11 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="/searchPage?name=">Crystal Structure</a></li>
-                        <li><a href="/electron">Electronic Structure</a></li>
-                        <li><a href="#">Phonon Dispersions</a></li>
-                        <li><a href="#">Thermodynamics</a></li>
-                        <li><a href="#">Elasticity</a></li>
-                        <li><a href="#">Publications</a></li>
+                        <li><a href="/searchPage3?name=">Electronic Structure</a></li>
+                        <li><a href="searchPage4?name=">Phonon Dispersions</a></li>
+                        <li><a href="searchPage5?name=">Thermodynamics</a></li>
+                        <li><a href="searchPage6?name=">Elasticity</a></li>
+                        <li><a href="/references">Publications</a></li>
                     </ul>
                 </li>
                 <li><a href="/paper">相关文献</a></li>
@@ -55,12 +57,12 @@
             </button>
         </div>
         <div class="col-lg-4">
-            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/electronicStructure'">Electronic
+            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/electronicStructure?id=0828a55d-1808-4dcc-a951-0b1f8de81bdd'">Electronic
                 Structures<br>晶体电子结构模块
             </button>
         </div>
         <div class="col-lg-4">
-            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/phonon'">Phonon Dispersions
+            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/phonon?id=0828a55d-1808-4dcc-a951-0b1f8de81bdd'">Phonon Dispersions
                 <br>晶体声子谱模块</button>
         </div>
     </div>
@@ -71,26 +73,59 @@
             <button type="button" class="btn btn-info btn-lg" onclick="location.href='/themodynamic'">Thermodynamics<br>晶体热力学性质模块</button>
         </div>
         <div class="col-lg-4">
-            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/tricliniCrystal'">Elasticity<br>力学性质模块
+            <button type="button" class="btn btn-info btn-lg" onclick="location.href='/elasticity?id=AlHf2'">Elasticity<br>力学性质模块
             </button>
         </div>
 
     </div>
 </div>
 <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
-<div id="main" style="width: 600px;height:400px;">
+<!--<div id="main" style="width: 600px;height:400px;">-->
 
-</div>
-<!-- 能级态密度分布图 -->
-<div id = "main1" style = "width: 600px;height:400px;">
-
-</div>
-<!-- 能带分布图 -->
-<div id = "main2" style = "width: 600px;height:400px;">
-</div>
-<!--&lt;!&ndash; 测试 &ndash;&gt;-->
-<!--<div id = "mainTest" style = "width: 600px;height:400px;">-->
 <!--</div>-->
+<!--&lt;!&ndash; 能级态密度分布图 &ndash;&gt;-->
+<!--<div id = "main1" style = "width: 600px;height:400px;">-->
+
+<!--</div>-->
+<!--&lt;!&ndash; 能带分布图 &ndash;&gt;-->
+<!--<div id = "main2" style = "width: 600px;height:400px;">-->
+<!--</div>-->
+<!--&lt;!&ndash;&lt;!&ndash; 测试 &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;<div id = "mainTest" style = "width: 600px;height:400px;">&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+<footer>
+    <hr>
+    <ul class="text-center inline">
+        <li>
+            <a href="/about">关于</a>
+        </li>
+        <li>
+            <a class="" href="" target="_blank">
+                论坛
+            </a>
+
+        </li>
+        <li>
+            <a href="/citing">引用</a>
+        </li>
+        <li>
+            <a href="/terms">我们的团队</a>
+        </li>
+        <li>
+            <a href="/open">API</a>
+        </li>
+    </ul>
+    <!--<div class="pad-top row text-center">-->
+    <!--<small>-->
+    <!--由 <a href="http://pymatgen.org">pymatgen</a>,-->
+    <!--<a href="https://materialsproject.github.io/custodian">custodian</a>,-->
+    <!--<a href="https://materialsproject.github.io/fireworks">fireworks</a>,-->
+    <!--and <a href="https://hackingmaterials.github.io/atomate">atomate</a>.-->
+    <!--</small>-->
+    <!--</div>-->
+
+</footer>
 </body>
 <script th:inline="javascript">
     // 基于准备好的dom，初始化echarts实例
