--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
                 <p>请选择用户类型:</p>
                 <select name="usertype" class="form-control" required>
                     <option>个人用户</option>
-                    <!--<option>管理员</option>-->
+                    <option>管理员</option>
                 </select><br>
 
                 <input name="username" id="username" type="text" class="form-control" placeholder="用户名" autofocus required>
@@ -63,39 +63,85 @@
 
 <script>
     function index(){
-        var username = $("#username").val()
-        var password = $("#password").val()
-        $.ajax(
-            {
-                url: '/check',
-                type: 'POST',
-                data: { 'username': username,
+        var select_type = $('.form-control option:selected') .val();
+
+        if (select_type == "个人用户") {
+            var username = $("#username").val()
+            var password = $("#password").val()
+            $.ajax(
+                {
+                    url: '/check',
+                    type: 'POST',
+                    data: { 'username': username,
                         'password': password},
-                success: function (data) {
-                       msg = data['msg']
-                       if (data == 0) {
-                             alert("账号不存在")
-                             layer.msg('账号不存在请重新登录')
-                             document.login.action="/login"
-                             document.login.submit()
-                       }
-                       else if(data == 1){
-                           alert("密码错误")
-                           layer.msg('密码错误请重新登录')
-                           document.login.action="/login"
-                           document.login.submit()
-                       }
-                       else {
-                             document.login.action="/index1"
-                             document.login.submit()
-                       }
-                },
-                error: function (data) {
-                       alert("账号不存在")
-                       console.log("NO");
-                       }
-            }
-        )
+                    success: function (data) {
+                        msg = data['msg']
+                        if (data == 0) {
+                            alert("账号不存在")
+                            layer.msg('账号不存在请重新登录')
+                            document.login.action="/login"
+                            document.login.submit()
+                        }
+                        else if(data == 1){
+                            alert("密码错误")
+                            layer.msg('密码错误请重新登录')
+                            document.login.action="/login"
+                            document.login.submit()
+                        }
+                        else {
+                            document.login.action="/index1"
+                            document.login.submit()
+                        }
+                    },
+                    error: function (data) {
+                        alert("账号不存在")
+                        console.log("NO");
+                    }
+                }
+            )
+        }
+        else {
+            var username = $("#username").val()
+            var password = $("#password").val()
+            $.ajax(
+                {
+                    url: '/check',
+                    type: 'POST',
+                    data: { 'username': username,
+                        'password': password},
+                    success: function (data) {
+                        msg = data['msg']
+                        if (data == 0) {
+                            alert("账号不存在")
+                            layer.msg('账号不存在请重新登录')
+                            document.login.action="/adminLogin"
+                            document.login.submit()
+                        }
+                        else if(data == 1){
+                            alert("密码错误")
+                            layer.msg('密码错误请重新登录')
+                            document.login.action="/adminLogin"
+                            document.login.submit()
+                        }
+                        else {
+                            document.login.action="/adminIndex"
+                            document.login.submit()
+                        }
+                    },
+                    error: function (data) {
+                        alert("账号不存在")
+                        console.log("NO");
+                    }
+                }
+            )
+        }
+
+    }
+</script>
+
+<script>
+    function index1(){
+
     }
 </script>
 <script>
