--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -41,11 +41,24 @@
             <td th:text="${Material.materialname}"></td>
             <td th:text="${Material.type}"></td>
             <td th:text="${Material.time}"></td>
-            <td><a th:href="'/crystalStructure1?id='+${Material.materialid}"><button type="button" class="RoleOfdelete btn btn-primary  btn-sm" style="margin-right:15px;">晶体结构</button></a>
-                <button type="button" class="RoleOfdelete btn btn-primary  btn-sm" style="margin-right:15px;">电子能带结构</button>
-                <button type="button" class="RoleOfdelete btn btn-primary  btn-sm" style="margin-right:15px;">声子谱</button>
-                <button type="button" class="RoleOfdelete btn btn-primary  btn-sm" style="margin-right:15px;">热力学性质</button>
-                <button type="button" class="RoleOfedit btn btn-primary  btn-sm" style="margin-right:15px;">力学性质</button></td>
+            <td>
+                <a th:href="'/crystalStructure1?id='+${Material.materialid}">
+                    <button type="button" class="RoleOfdelete btn btn-primary  btn-sm" style="margin-right:15px;">晶体结构</button>
+                </a>
+                <a th:href="'/electronicStructrue?id='+${Material.materialid}">
+                    <button type="button" class="RoleOfdelete btn btn-primary  btn-sm" style="margin-right:15px;">电子能带结构</button>
+                </a>
+                <a th:href="'/phonon?id='+${Material.materialid}">
+                    <button type="button" class="RoleOfdelete btn btn-primary  btn-sm" style="margin-right:15px;">声子谱</button>
+                </a>
+                <a th:href="'/themodynamic?id='+${Material.materialid}">
+                    <button type="button" class="RoleOfdelete btn btn-primary  btn-sm" style="margin-right:15px;">热力学性质</button>
+                </a>
+                <a th:href="'/elasticity?id='+${Material.materialid}">
+                    <button type="button" class="RoleOfedit btn btn-primary  btn-sm" style="margin-right:15px;">力学性质</button>
+                </a>
+            </td>
+
         </tr>
         </tbody>
     </table>
