--- a/src/main/resources/templates/foreWeb/index1.html
+++ b/src/main/resources/templates/foreWeb/index1.html
@@ -494,10 +494,10 @@
             </a>
         </li>
         <li>
-            <a href="/citing">引用</a>
+            <a href="https://materialsproject.org/citing">引用</a>
         </li>
         <li>
-            <a href="/terms">我们的团队</a>
+            <a href="/teams">我们的团队</a>
         </li>
         <li>
             <a href="/open">API</a>
