--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -21,8 +21,7 @@
                     <span class="input-group-btn">
                                 <!--<button class="btn btn-default" type="button"-->
                                         <!--onclick="location.href='/crystal?name='+$('#material').val()">Go!</button>-->
-                                <button class="btn btn-default" type="button"
-                                        onclick="location.href='/searchPage?name='+$('#material').val()">高级搜索</button>
+                        <button class="btn btn-default" type="button" onclick="location.href='/searchPage?name='+$('#material').val()">高级搜索</button>
                     </span>
                 </div><!-- /input-group -->
 
